# snake-rw-clone

./: CMakeLists.txt
src/: main.c  stb_ds.c
src/assets/shaders/: blur.glsl  scanline.glsl  threshold.glsl
